Add support for using jsonschema
Schemas can be generated for records and can be used to validate that a
given record (dumped to a json_compatible dict) satisfies the schema.

Change-Id: I8e03bcaa86918345503a3df7c2aeaa9e6fba8d17
Reviewed-on: https://gerrit.spotify.net/gerrit/126117
TC-Compile-And-Test: Team City <teamcity@spotify.com>
Reviewed-by: André Eriksson <eandre@spotify.com>
Reviewed-by: Elias Freider <freider@spotify.com>

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Maintainer: Elias Freider <freider@spotify.com>
 Build-Depends:	debhelper (>= 7),
 		python-all (>= 2.6.6-3~),
 		python-simplejson,
+		python-jsonschema,
+		python-ordereddict
 Standards-Version: 3.7.3
 X-Python-Version: >= 2.6
 
@@ -13,4 +15,5 @@ Architecture: all
 Depends: ${shlibs:Depends},
 	 	 ${misc:Depends},
 	 	 ${python:Depends},
+	 	 python-ordereddict
 Description: Schema definition and serialisation library
